TestSuite/Syntax/Correct/TimeFrame.tjp
project simple "Simple Project" "$Id" 2000-01-01-12:30 2000-01-04-18:25

resource tux "Tux"

task t1 "Task1" {
  start 2000-01-01-12:30
  length 1d
}

task t2 "Task2" {
  start 2000-01-02
  duration 1d
}

task t3 "Task3" {
  start 2000-01-02
  effort 1d
  allocate tux
}
