TestSuite/Syntax/Errors/DepLoop11.tjp
project prj "Loop Detector Test" "$Id" 2000-01-01 - 2000-01-04

task t1 "Task1" {
  length 1d
	depends !t1
}

